The project has been completed

--- a/Html files/about.html
+++ b/Html files/about.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Css files/style.css">
-    <link rel="stylesheet" href="/Css files/about.css">
-    <script src="/JS files/main.js"></script>
+    <link rel="stylesheet" href="../Css files/style.css">
+    <link rel="stylesheet" href="../Css files/about.css">
+    <script src="../JS files/main.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -16,21 +16,23 @@
         </div>
         <div id="navbar">
             <ul>
-                <li><a class="links" href="/Html files/index.html">Home</a></li>
-                <li><a class="links active" href="/Html files/about.html">About</a></li>
-                <li><a class="links" href="/Html files/products.html">Products</a></li>
-                <li><a class="links" href="/Html files/contact.html">Log in</a></li>
-                <li><a onclick="shop()" class="link-icon" href="/Html files/shop.html"><img src="/imagees/shopping-cart.png" alt=""></a></li>    
+                <li><a class="links" href="../Html files/index.html">Home</a></li>
+                <li><a class="links active" href="../Html files/about.html">About</a></li>
+                <li><a class="links" href="../Html files/products.html">Products</a></li>
+                <li><a class="links" href="../Html files/blog.html">Blogs</a></li>
+                <li><a class="links" href="../Html files/contact.html">Log in</a></li>
+                <li><a onclick="shop()" class="link-icon" href="../Html files/shop.html"><img src="../imagees/shopping-cart.png" alt=""></a></li>    
             </ul>
         </div>
 
         <div class="extra-nav">
             <ul>
-                <li><a class="links link-icon" href="/Html files/index.html"><img src="/imagees/home.png" alt="#"></a></li>
-                <li><a class="links active link-icon" href="/Html files/about.html"><img src="/imagees/about.png" alt=""></a></li>
-                <li><a class="links link-icon" href="/Html files/products.html"><img src="/imagees/brand-identity.png" alt=""></a></li>
-                <li><a class="links link-icon" href="/Html files/contact.html"><img src="/imagees/enter.png" alt=""></a></li>
-                <li><a onclick="shop()" class="link-icon" href="/Html files/shop.html"><img src="/imagees/shopping-cart.png" alt=""></a></li>    
+                <li><a class="links link-icon" href="../Html files/index.html"><img src="../imagees/home.png" alt="#"></a></li>
+                <li><a class="links active link-icon" href="../Html files/about.html"><img src="../imagees/about.png" alt=""></a></li>
+                <li><a class="links link-icon" href="../Html files/products.html"><img src="../imagees/brand-identity.png" alt=""></a></li>
+                <li><a class="links link-icon" href="../Html files/blog.html"><img src="../imagees/technical-support.png" alt=""></a></li>
+                <li><a class="links link-icon" href="../Html files/contact.html"><img src="../imagees/enter.png" alt=""></a></li>
+                <li><a onclick="shop()" class="link-icon" href="../Html files/shop.html"><img src="../imagees/shopping-cart.png" alt=""></a></li>    
             </ul>
         </div>
     </nav>
@@ -71,7 +73,7 @@
 
 
 
-    <button onclick="topFunction()" id="myBtn" title="Go to top"><a href="#"><img src="/imagees/up-arrow.png" alt=""></a></button>
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><a href="#"><img src="../imagees/up-arrow.png" alt=""></a></button>
 
 
 
