--- a/Html files/contact.html
+++ b/Html files/contact.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Css files/contact.css">
-    <link rel="stylesheet" href="/Css files/style.css">
+    <link rel="stylesheet" href="../Css files/contact.css">
+    <link rel="stylesheet" href="../Css files/style.css">
     <title>Singup Login form</title>
 </head>
 <body>
@@ -17,21 +17,23 @@
         </div>
         <div id="navbar">
             <ul>
-                <li><a class="links" href="/Html files/index.html">Home</a></li>
-                <li><a class="links" href="/Html files/about.html">About</a></li>
-                <li><a class="links" href="/Html files/products.html">Products</a></li>
-                <li><a class="links active" href="/Html files/contact.html">Log in</a></li>
-                <li><a onclick="shop()" class="link-icon" href="/Html files/shop.html"><img src="/imagees/shopping-cart.png" alt=""></a></li>    
+                <li><a class="links" href="../Html files/index.html">Home</a></li>
+                <li><a class="links" href="../Html files/about.html">About</a></li>
+                <li><a class="links" href="../Html files/products.html">Products</a></li>
+                <li><a class="links" href="../Html files/blog.html">Blogs</a></li>
+                <li><a class="links active" href="../Html files/contact.html">Log in</a></li>
+                <li><a onclick="shop()" class="link-icon" href="../Html files/shop.html"><img src="../imagees/shopping-cart.png" alt=""></a></li>    
             </ul>
         </div>
 
         <div class="extra-nav">
             <ul>
-                <li><a class="links link-icon" href="/Html files/index.html"><img src="/imagees/home.png" alt="#"></a></li>
-                <li><a class="links link-icon" href="/Html files/about.html"><img src="/imagees/about.png" alt=""></a></li>
-                <li><a class="links link-icon" href="/Html files/products.html"><img src="/imagees/brand-identity.png" alt=""></a></li>
-                <li><a class="links active link-icon" href="/Html files/contact.html"><img src="/imagees/enter.png" alt=""></a></li>
-                <li><a onclick="shop()" class="link-icon" href="/Html files/shop.html"><img src="/imagees/shopping-cart.png" alt=""></a></li>    
+                <li><a class="links link-icon" href="../Html files/index.html"><img src="../imagees/home.png" alt="#"></a></li>
+                <li><a class="links link-icon" href="../Html files/about.html"><img src="../imagees/about.png" alt=""></a></li>
+                <li><a class="links link-icon" href="../Html files/products.html"><img src="../imagees/brand-identity.png" alt=""></a></li>
+                <li><a class="links link-icon" href="../Html files/blog.html"><img src="../imagees/technical-support.png" alt=""></a></li>
+                <li><a class="links active link-icon" href="../Html files/contact.html"><img src="../imagees/enter.png" alt=""></a></li>
+                <li><a onclick="shop()" class="link-icon" href="../Html files/shop.html"><img src="../imagees/shopping-cart.png" alt=""></a></li>    
             </ul>
         </div>
     </nav>
@@ -42,25 +44,25 @@
     <header id="contact-header">
         <div class="contacts">
             <div href="" class="elements reveal">
-                <i><img src="/imagees/maps-and-flags.png" alt=""></i>
+                <i><img src="../imagees/maps-and-flags.png" alt=""></i>
                 <h2>Our main branch</h2>
                 <p><a href="https://goo.gl/maps/AYZsexJtyqRmm8Y66">4 Farhod ko'chasi, Тошкент 100097</a></p>
             </div>
 
             <div class="elements reveal">
-                <i><img src="/imagees/phone-call.png" alt=""></i>
+                <i><img src="../imagees/phone-call.png" alt=""></i>
                 <h2>Phone number</h2>
                 <p><a href="">+998(97) 100-63-63</a></p>
             </div>
 
             <div href="https://www.instagram.com/uno.mens.wear/" class="elements reveal">
-                <i><img src="/imagees/instagram.png" alt=""></i>
+                <i><img src="../imagees/instagram.png" alt=""></i>
                 <h2>Our Instagram</h2>
                 <p><a href="https://www.instagram.com/uno.mens.wear/">@uno.mens.wear</a></p>
             </div>
 
             <div href="https://t.me/UnoMensWear" class="elements reveal">
-                <i><img src="/imagees/telegram.png" alt=""></i>
+                <i><img src="../imagees/telegram.png" alt=""></i>
                 <h2>Our telegram</h2>
                 <p><a href="https://t.me/UnoMensWear">t.me/UnoMensWear</a></p>
             </div>
@@ -122,7 +124,7 @@
 
 
 
-    <button onclick="topFunction()" id="myBtn" title="Go to top"><a href="#"><img src="/imagees/up-arrow.png" alt=""></a></button>
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><a href="#"><img src="../imagees/up-arrow.png" alt=""></a></button>
 
 
     <footer>
@@ -130,6 +132,6 @@
     </footer>
 
 
-    <script src="/JS files/main.js"></script>
+    <script src="../JS files/main.js"></script>
 </body>
 </html>
