--- a/Html files/index.html
+++ b/Html files/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Css files/style.css">
-    <script src="/JS files/main.js"></script>
-    <!-- <script src="/JS files/scrolling.js"></script> -->
+    <link rel="stylesheet" href="../Css files/style.css">
+    <script src="../JS files/main.js"></script>
     <title>UNO</title>
 </head>
 <body>
@@ -16,21 +15,23 @@
         </div>
         <div id="navbar">
             <ul>
-                <li><a class="links active" href="/Html files/index.html">Home</a></li>
-                <li><a class="links" href="/Html files/about.html">About</a></li>
-                <li><a class="links" href="/Html files/products.html">Products</a></li>
-                <li><a class="links" href="/Html files/contact.html">Log in</a></li>
-                <li><a onclick="shop()" class="link-icon" href="/Html files/shop.html"><img src="/imagees/shopping-cart.png" alt=""></a></li>    
+                <li><a class="links active" href="../Html files/index.html">Home</a></li>
+                <li><a class="links" href="../Html files/about.html">About</a></li>
+                <li><a class="links" href="../Html files/products.html">Products</a></li>
+                <li><a class="links" href="../Html files/blog.html">Blogs</a></li>
+                <li><a class="links" href="../Html files/contact.html">Log in</a></li>
+                <li><a onclick="shop()" class="link-icon" href="../Html files/shop.html"><img src="../imagees/shopping-cart.png" alt=""></a></li>    
             </ul>
         </div>
 
         <div class="extra-nav">
             <ul>
-                <li><a class="links active link-icon" href="/Html files/index.html"><img src="/imagees/home.png" alt="#"></a></li>
-                <li><a class="links link-icon" href="/Html files/about.html"><img src="/imagees/about.png" alt=""></a></li>
-                <li><a class="links link-icon" href="/Html files/products.html"><img src="/imagees/brand-identity.png" alt=""></a></li>
-                <li><a class="links link-icon" href="/Html files/contact.html"><img src="/imagees/enter.png" alt=""></a></li>
-                <li><a onclick="shop()" class="link-icon" href="/Html files/shop.html"><img src="/imagees/shopping-cart.png" alt=""></a></li>    
+                <li><a class="links active link-icon" href="../Html files/index.html"><img src="../imagees/home.png" alt="#"></a></li>
+                <li><a class="links link-icon" href="../Html files/about.html"><img src="../imagees/about.png" alt=""></a></li>
+                <li><a class="links link-icon" href="../Html files/products.html"><img src="../imagees/brand-identity.png" alt=""></a></li>
+                <li><a class="links link-icon" href="../Html files/blog.html"><img src="../imagees/technical-support.png" alt=""></a></li>
+                <li><a class="links link-icon" href="../Html files/contact.html"><img src="../imagees/enter.png" alt=""></a></li>
+                <li><a onclick="shop()" class="link-icon" href="../Html files/shop.html"><img src="../imagees/shopping-cart.png" alt=""></a></li>    
             </ul>
         </div>
     </nav>
@@ -44,7 +45,7 @@
             </div>
         </div>
         <div class="images reveal">
-            <img src="/imagees/preview.png" alt="">
+            <img src="../imagees/preview.png" alt="">
         </div>
     </header>
 
@@ -54,19 +55,19 @@
         </div>
        <div class="main-content reveal">
         <div class="section1-contents">
-            <img src="/imagees/beautiful-stylish-groom-s-cufflinks-shirt.jpg" alt="">
+            <img src="../imagees/beautiful-stylish-groom-s-cufflinks-shirt.jpg" alt="">
             <h2>The Fashionisto</h2>
             <a href="#">Click for More ></a>
         </div>
 
         <div class="section1-contents">
-            <img src="/imagees/0202-dan-roberts-street-style-NYMFW-FW17-30.webp" alt="">
+            <img src="../imagees/0202-dan-roberts-street-style-NYMFW-FW17-30.webp" alt="">
             <h2>Street Style</h2>
             <a href="#">Click for More ></a>
         </div>
 
         <div class="section1-contents">
-            <img src="/imagees/cute-stylish-children-white-wall_155003-10585.webp" alt="">
+            <img src="../imagees/cute-stylish-children-white-wall_155003-10585.webp" alt="">
             <h2>For kids</h2>
             <a href="#">Click for More ></a>
         </div>
@@ -95,7 +96,7 @@
 
         <div class="selling">
             <div class="items reveal">
-                <img src="/imagees/top selling (1).jpg" alt="">
+                <img src="../imagees/top selling (1).jpg" alt="">
                 <div class="item-contents">
                     <h3>Sneakerss</h3>
                     <p>25$</p>
@@ -103,7 +104,7 @@
             </div>
 
             <div class="items reveal">
-                <img src="/imagees/top selling (2).jpg" alt="">
+                <img src="../imagees/top selling (2).jpg" alt="">
                 <div class="item-contents">
                     <h3>Coat</h3>
                     <p>53$</p>
@@ -111,7 +112,7 @@
             </div>
 
             <div class="items reveal">
-                <img src="/imagees/top selling (3).jpg" alt="">
+                <img src="../imagees/top selling (3).jpg" alt="">
                 <div class="item-contents">
                     <h3>T-shirt</h3>
                     <p>15$</p>
@@ -119,7 +120,7 @@
             </div>
 
             <div class="items reveal">
-                <img src="/imagees/top selling (4).jpg" alt="">
+                <img src="../imagees/top selling (4).jpg" alt="">
                 <div class="item-contents">
                     <h3>T-shirt</h3>
                     <p>15$</p>
@@ -127,7 +128,7 @@
             </div>
 
             <div class="items reveal">
-                <img src="/imagees/top selling (5).jpg" alt="">
+                <img src="../imagees/top selling (5).jpg" alt="">
                 <div class="item-contents">
                     <h3>Sweater</h3>
                     <p>15$</p>
@@ -135,7 +136,7 @@
             </div>
 
             <div class="items reveal">
-                <img src="/imagees/top selling (6).jpg" alt="">
+                <img src="../imagees/top selling (6).jpg" alt="">
                 <div class="item-contents">
                     <h3>Trousers</h3>
                     <p>15$</p>
@@ -143,7 +144,7 @@
             </div>
 
             <div class="items reveal">
-                <img src="/imagees/top selling (7).jpg" alt="">
+                <img src="../imagees/top selling (7).jpg" alt="">
                 <div class="item-contents">
                     <h3>Loro Piano</h3>
                     <p>35$</p>
@@ -151,7 +152,7 @@
             </div>
 
             <div class="items reveal">
-                <img src="/imagees/top selling (8).jpg" alt="">
+                <img src="../imagees/top selling (8).jpg" alt="">
                 <div class="item-contents">
                     <h3>Hats</h3>
                     <p>6$</p>
@@ -159,7 +160,7 @@
             </div>
 
             <div class="items reveal">
-                <img src="/imagees/top selling (9).jpg" alt="">
+                <img src="../imagees/top selling (9).jpg" alt="">
                 <div class="item-contents">
                     <h3>Watch</h3>
                     <p>300$</p>
@@ -185,7 +186,7 @@
 
 
 
-    <button onclick="topFunction()" id="myBtn" title="Go to top"><a href="#"><img src="/imagees/up-arrow.png" alt=""></a></button>
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><a href="#"><img src="../imagees/up-arrow.png" alt=""></a></button>
     <footer>
         <h4>&copy; All right Reserved</h4>
     </footer>
