--- a/Html files/products.html
+++ b/Html files/products.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Css files/products.css">
-    <link rel="stylesheet" href="/Css files/style.css">
-    <script src="/JS files/main.js"></script>
+    <link rel="stylesheet" href="../Css files/products.css">
+    <link rel="stylesheet" href="../Css files/style.css">
+    <script src="../JS files/main.js"></script>
     <title>Products</title>
 </head>
 <body>
@@ -16,21 +16,23 @@
         </div>
         <div id="navbar">
             <ul>
-                <li><a class="links" href="/Html files/index.html">Home</a></li>
-                <li><a class="links" href="/Html files/about.html">About</a></li>
-                <li><a class="links active" href="/Html files/products.html">Products</a></li>
-                <li><a class="links" href="/Html files/contact.html">Log in</a></li>
-                <li><a onclick="shop()" class="link-icon" href="/Html files/shop.html"><img src="/imagees/shopping-cart.png" alt=""></a></li>    
+                <li><a class="links" href="../Html files/index.html">Home</a></li>
+                <li><a class="links" href="../Html files/about.html">About</a></li>
+                <li><a class="links active" href="../Html files/products.html">Products</a></li>
+                <li><a class="links" href="../Html files/blog.html">Blogs</a></li>
+                <li><a class="links" href="../Html files/contact.html">Log in</a></li>
+                <li><a onclick="shop()" class="link-icon" href="../Html files/shop.html"><img src="../imagees/shopping-cart.png" alt=""></a></li>    
             </ul>
         </div>
 
         <div class="extra-nav">
             <ul>
-                <li><a class="links link-icon" href="/Html files/index.html"><img src="/imagees/home.png" alt="#"></a></li>
-                <li><a class="links link-icon" href="/Html files/about.html"><img src="/imagees/about.png" alt=""></a></li>
-                <li><a class="links active link-icon" href="/Html files/products.html"><img src="/imagees/brand-identity.png" alt=""></a></li>
-                <li><a class="links link-icon" href="/Html files/contact.html"><img src="/imagees/enter.png" alt=""></a></li>
-                <li><a onclick="shop()" class="link-icon" href="/Html files/shop.html"><img src="/imagees/shopping-cart.png" alt=""></a></li>    
+                <li><a class="links link-icon" href="../Html files/index.html"><img src="../imagees/home.png" alt="#"></a></li>
+                <li><a class="links link-icon" href="../Html files/about.html"><img src="../imagees/about.png" alt=""></a></li>
+                <li><a class="links active link-icon" href="../Html files/products.html"><img src="../imagees/brand-identity.png" alt=""></a></li>
+                <li><a class="links link-icon" href="../Html files/blog.html"><img src="../imagees/technical-support.png" alt=""></a></li>
+                <li><a class="links link-icon" href="../Html files/contact.html"><img src="../imagees/enter.png" alt=""></a></li>
+                <li><a onclick="shop()" class="link-icon" href="../Html files/shop.html"><img src="../imagees/shopping-cart.png" alt=""></a></li>    
             </ul>
         </div>
     </nav>
@@ -98,25 +100,25 @@
 
         <div class="populars">
             <div class="p-contents reveal">
-                <img src="/imagees/products-image (1).jpg" alt="">
+                <img src="../imagees/products-image (1).jpg" alt="">
                 <h3>Sheep Skin Coat</h3>
                 <a href="https://www.instagram.com/p/CjetQEzKvo5/?igshid=YmMyMTA2M2Y=">40$</a>
             </div>
 
             <div class="p-contents reveal">
-                <img src="/imagees/products-image (2).jpg" alt="">
+                <img src="../imagees/products-image (2).jpg" alt="">
                 <h3>Casual Hoodie</h3>
                 <a href="https://www.instagram.com/uno.mens.wear/">34$</a>
             </div>
 
             <div class="p-contents reveal">
-                <img src="/imagees/products-image (3).jpg" alt="">
+                <img src="../imagees/products-image (3).jpg" alt="">
                 <h3>Classic Style Pants</h3>
                 <a href="https://www.instagram.com/uno.mens.wear/">15$</a>
             </div>
 
             <div class="p-contents reveal">
-                <img src="/imagees/products-image (4).jpg" alt="">
+                <img src="../imagees/products-image (4).jpg" alt="">
                 <h3>Suit Blazer</h3>
                 <a href="https://www.instagram.com/uno.mens.wear/">55$</a>
             </div>
@@ -140,7 +142,7 @@
     <section id="perfume">
         <div class="perfumes">
             <div class="perfume-contents reveal">
-                <img src="/imagees/perfume.webp" alt="">
+                <img src="../imagees/perfume.webp" alt="">
                 <div class="cost">
                     <h3>Valentino</h3>
                     <a href="https://www.valentino.com/en-be/men/fragrances">25$</a>
@@ -148,7 +150,7 @@
             </div>
 
             <div class="perfume-contents reveal">
-                <img src="/imagees/perfumes (1).webp" alt="">
+                <img src="../imagees/perfumes (1).webp" alt="">
                 <div class="cost">
                     <h3>Burberry</h3>
                     <a href="https://www.fragrantica.ru/designers/Burberry.html">38$</a>
@@ -156,7 +158,7 @@
             </div>
 
             <div class="perfume-contents reveal">
-                <img src="/imagees/perfumes (2).webp" alt="">
+                <img src="../imagees/perfumes (2).webp" alt="">
                 <div class="cost">
                     <h3>Jimmy Choo-Blue</h3>
                     <a href="https://www.fragrantica.ru/perfume/Jimmy-Choo/Jimmy-Choo-10573.html">45$</a>
@@ -164,7 +166,7 @@
             </div>
 
             <div class="perfume-contents reveal">
-                <img src="/imagees/perfumes (3).webp" alt="">
+                <img src="../imagees/perfumes (3).webp" alt="">
                 <div class="cost">
                     <h3>Sauvage</h3>
                     <a href="https://www.fragrantica.ru/perfume/Dior/Sauvage-31861.html">55$</a>
@@ -190,7 +192,7 @@
 
 
 
-    <button onclick="topFunction()" id="myBtn" title="Go to top"><a href="#"><img src="/imagees/up-arrow.png" alt=""></a></button>
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><a href="#"><img src="../imagees/up-arrow.png" alt=""></a></button>
 
 
     <footer>
