title icon has been added

--- a/Html files/about.html
+++ b/Html files/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Css files/style.css">
     <link rel="stylesheet" href="../Css files/about.css">
+    <link rel="shortcut icon" href="../imagees/UNO (3).png" type="">
     <script src="../JS files/main.js"></script>
     <title>Document</title>
 </head>
