--- a/Html files/blog.html
+++ b/Html files/blog.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../Css files/style.css">
     <link rel="stylesheet" href="../Css files/blog.css">
+    <link rel="shortcut icon" href="../imagees/UNO (3).png" type="">
     <script src="../JS files/main.js"></script>
 </head>
 <body>
