--- a/Html files/index.html
+++ b/Html files/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Css files/style.css">
+    <link rel="shortcut icon" href="../imagees/UNO (3).png" type="">
     <script src="../JS files/main.js"></script>
     <title>UNO</title>
 </head>
