--- a/Html files/contact.html
+++ b/Html files/contact.html
@@ -91,7 +91,7 @@
                         <input type="email" placeholder="Email address" autocomplete="offf" required>
                     </div>
                     <div class="inputGroup">
-                        <input type="password" placeholder="Create new password" id="password" autocomplete="offf">
+                        <input type="password" placeholder="Create new password" id="password" autocomplete="offf" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
                     </div>
                     <div class="inputGroup">
                         <input type="password" placeholder="Confirm password" autocomplete="offf">
@@ -110,6 +110,14 @@
                 </form>
             </div>
         </div>
+
+        <div id="message">
+            <h3>Password must contain the following:</h3>
+            <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
+            <p id="capital" class="invalid">A <b>capital (uppercase)</b> letter</p>
+            <p id="number" class="invalid">A <b>number</b></p>
+            <p id="length" class="invalid">Minimum <b>8 characters</b></p>
+          </div>
     </section>
 
 
