--- a/Html files/contact.html
+++ b/Html files/contact.html
@@ -104,7 +104,7 @@
                         <input type="email" placeholder="Email address" autocomplete="offf">
                     </div> 
                     <div class="inputGroup">
-                        <input type="password" placeholder="Enter password" autocomplete="offf" id="password" name="password">
+                        <input type="password" placeholder="Enter password" autocomplete="offf" id="password" name="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
                     </div>
                     <button type="submit" class="submitBtn">Login</button>
                 </form>
